# SEANewsAlert_FullStack

./: .gitignore  CLAUDE.md  fix_emoji.py  test_api.json  test_progress_display.html
SEANewsAlert/: .env.example  .gitignore  Dockerfile  FRONTEND_API.md  HOW_TO_START.md  MIGRATION_SUMMARY.md  PERMISSION_FIX.md  PRD.md  QUICK_START_NEW_PC.md  README.md  RELOAD_FIX.md  TROUBLESHOOTING_USER_ISSUES.md  UV_MIGRATION.md  UV_QUICK_REFERENCE.md  config.py  docker-compose.yml  pyproject.toml  requirements-api.txt  test_integration.py  test_research_agent.py  test_web_search_simple.py  workflow.py
SEANewsAlert/agents/: __init__.py  analyst_agent.py  email_agent.py  report_agent.py  research_agent.py
SEANewsAlert/app/: __init__.py  main.py
SEANewsAlert/boot-script/: REBUILD-VENV.bat  REBUILD-VENV.sh  START-ALL.bat  START-ALL.sh  START-FAST.bat  START-FAST.sh  START-FULLSTACK-SIMPLE.bat  START-FULLSTACK.bat  START-SIMPLE.bat
SEANewsAlert/docs/: ARCHITECTURE.md  SYSTEM_FLOW.md
SEANewsAlert/public/: index.html
SEANewsAlert/reports/: 東南亞金融新聞報告_20251020_150910.xlsx  東南亞金融新聞報告_20251020_151833.xlsx  東南亞金融新聞報告_20251020_161020.xlsx  東南亞金融新聞報告_20251020_173003.xlsx  東南亞金融新聞報告_20251020_174549.xlsx  東南亞金融新聞報告_20251031_151413.xlsx  東南亞金融新聞報告_20251031_152605.xlsx  東南亞金融新聞報告_20251103_140454.xlsx  東南亞金融新聞報告_20251103_141635.xlsx  東南亞金融新聞報告_20251103_163750.xlsx  東南亞金融新聞報告_20251121_105148.xlsx  東南亞金融新聞報告_20251121_111036.xlsx  東南亞金融新聞報告_20251121_113658.xlsx  東南亞金融新聞報告_20251121_134953.xlsx  東南亞金融新聞報告_20251121_135831.xlsx  東南亞金融新聞報告_20251121_141712.xlsx  東南亞金融新聞報告_20251121_143449.xlsx  (+3 more)
(+27 files in other folders)
